Additional requirments were added